--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".User.Activities.cart"></activity>
+        <activity android:name=".ProfileMine"></activity>
+        <activity android:name=".User.Activities.cart" />
         <activity android:name=".User.Activities.shops" />
         <activity android:name=".Common.LoginSignup.Signup" />
         <activity android:name=".Common.LoginSignup.Login" />
